Salesforce/main/default/main/default/objects/CRM_Detalle_Calendario_de_eventos__c/fields/Area_plantada__c.field-meta.xml
<CustomField>
    <fullName>Area_plantada__c</fullName>
    <label>Área Plantada (Ha)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>