Salesforce/main/default/main/default/objects/CRM_Detalle_Calendario_de_eventos__c/fields/Cultivar__c.field-meta.xml
<CustomField>
    <fullName>Cultivar__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cultivar</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1</booleanFilter>
        <filterItems>
            <field>Product2.Obtentor__c</field>
            <operation>notEqual</operation>
            <value/>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>CRM Detalles Calendário de eventos</relationshipLabel>
    <relationshipName>CRM_Detalles_Calend_rio_de_eventos</relationshipName>
    <type>Lookup</type>
</CustomField>