Salesforce/main/default/main/default/objects/CRM_Detalle_Calendario_de_eventos__c/fields/Data_de_colheita__c.field-meta.xml
<CustomField>
    <fullName>Data_de_colheita__c</fullName>
    <label>Data de colheita</label>
    <type>Date</type>
</CustomField>