Salesforce/main/default/main/default/objects/CRM_Detalle_Calendario_de_eventos__c/fields/Espacamento__c.field-meta.xml
<CustomField>
    <fullName>Espacamento__c</fullName>
    <label>Espaçamento (cm)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>