Salesforce/main/default/main/default/objects/CRM_Detalle_Calendario_de_eventos__c/fields/Justificativa__c.field-meta.xml
<CustomField>
    <fullName>Justificativa__c</fullName>
    <label>Justificativa de não compra</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Não encontrei semente</fullName>
            </value>
            <value>
                <fullName>Preço elevado</fullName>
            </value>
            <value>
                <fullName>Condição de pagamento inviável</fullName>
            </value>
            <value>
                <fullName>Plantio de campo de sementes</fullName>
            </value>
            <value>
                <fullName>Produtividade abaixo do esperado</fullName>
            </value>
            <value>
                <fullName>Material não se encaixou em meu planejamento</fullName>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>