Salesforce/main/default/main/default/objects/CRM_Detalle_Calendario_de_eventos__c/fields/Nome_de_registro__c.field-meta.xml
<CustomField>
    <fullName>Nome_de_registro__c</fullName>
    <formula>Cultivar__r.Variedade__r.Nombre_de_Registro__c</formula>
    <label>Nome de registro</label>
    <type>Text</type>
</CustomField>