Salesforce/main/default/main/default/objects/CRM_Detalle_Calendario_de_eventos__c/fields/Observacao__c.field-meta.xml
<CustomField>
    <fullName>Observacao__c</fullName>
    <label>Observação</label>
    <type>TextArea</type>
</CustomField>