Salesforce/main/default/main/default/objects/CRM_Detalle_Calendario_de_eventos__c/fields/Obtentor__c.field-meta.xml
<CustomField>
    <fullName>Obtentor__c</fullName>
    <label>Obtentor</label>
    <length>25</length>
    <type>Text</type>
</CustomField>