Salesforce/main/default/main/default/objects/CRM_Detalle_Calendario_de_eventos__c/fields/Outra_cultura_antecessora__c.field-meta.xml
<CustomField>
    <fullName>Outra_cultura_antecessora__c</fullName>
    <label>Outra cultura antecessora</label>
    <length>50</length>
    <type>Text</type>
</CustomField>