Salesforce/main/default/main/default/objects/CRM_Detalle_Calendario_de_eventos__c/fields/Populacao_de_plantas__c.field-meta.xml
<CustomField>
    <fullName>Populacao_de_plantas__c</fullName>
    <label>População de plantas (Plantas/metro)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>