Salesforce/main/default/main/default/objects/CRM_Detalle_Calendario_de_eventos__c/fields/Usar_en_Bonificacion__c.field-meta.xml
<CustomField>
    <fullName>Usar_en_Bonificacion__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Usar em Bonificação</label>
    <type>Checkbox</type>
</CustomField>