Salesforce/main/default/main/default/objects/CRM_Detalle_Calendario_de_eventos__c/fields/Volume_de_intencao_de_compra__c.field-meta.xml
<CustomField>
    <fullName>Volume_de_intencao_de_compra__c</fullName>
    <label>Volume de intenção de compra (Kg)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>