Salesforce/main/default/main/default/objects/CRM_Detalle_Calendario_de_eventos__c/fields/Volume_Doado__c.field-meta.xml
<CustomField>
    <fullName>Volume_Doado__c</fullName>
    <label>Volume Doado (Kg)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>